# RealWorks-3D-AssetLibrary-and-Converter

./: README.md  memory.md  package-lock.json  package.json
blender/: convert.py  crash_log.txt  debug_log.txt  patch.py  patch_err.py  patch_final.py  patch_headless.py  patch_key.py  patch_log.py  patch_log2.py  patch_log_path.py  patch_secure.py  patch_textures.py  patch_vlm_rename.py  test_headless.py
new_ui/app/: routes.tsx
new_ui/app/components/: Layout.tsx
new_ui/app/context/: AppContext.tsx
new_ui/app/screens/: Library.tsx  Logs.tsx  Queue.tsx  Settings.tsx
src-tauri/: Cargo.toml  crash_log.txt  debug_log.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
src/app/: App.tsx
src/app/components/: Layout.tsx
src/app/context/: AppContext.tsx
src/app/screens/: Library.tsx  Logs.tsx  Queue.tsx  Settings.tsx
src/styles/: fonts.css  index.css  tailwind.css
